--- a/docs/latex/classoriginal_1_1autoPtr.tex
+++ b/docs/latex/classoriginal_1_1autoPtr.tex
@@ -11,7 +11,8 @@ Base smart pointer with reference counting.
 
 
 
-Inheritance diagram for original\+::auto\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
+Inheritance diagram for original\+::auto\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
