--- a/docs/latex/classoriginal_1_1refCntPtr.tex
+++ b/docs/latex/classoriginal_1_1refCntPtr.tex
@@ -11,7 +11,8 @@ Base class for reference-\/counted pointers.
 
 
 
-Inheritance diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
+Inheritance diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -20,7 +21,8 @@ Inheritance diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, D
 \end{figure}
 
 
-Collaboration diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
+Collaboration diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -30,6 +32,10 @@ Collaboration diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE,
 \doxysubsubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
+{\footnotesize template$<$typename O\+\_\+\+DERIVED$>$ }\\bool \mbox{\hyperlink{classoriginal_1_1refCntPtr_a6a675f488777908381084b8821efaf04}{operator==}} (const \mbox{\hyperlink{classoriginal_1_1refCntPtr}{ref\+Cnt\+Ptr}}$<$ TYPE, O\+\_\+\+DERIVED, DELETER $>$ \&other) const
+\begin{DoxyCompactList}\small\item\em Equality comparison operator. \end{DoxyCompactList}\item 
+{\footnotesize template$<$typename O\+\_\+\+DERIVED$>$ }\\bool \mbox{\hyperlink{classoriginal_1_1refCntPtr_a614ce0dae97e2a365ba62f9681b8d28e}{operator!=}} (const \mbox{\hyperlink{classoriginal_1_1refCntPtr}{ref\+Cnt\+Ptr}}$<$ TYPE, O\+\_\+\+DERIVED, DELETER $>$ \&other) const
+\begin{DoxyCompactList}\small\item\em Inequality comparison operator. \end{DoxyCompactList}\item 
 std\+::string \mbox{\hyperlink{classoriginal_1_1refCntPtr_a062a5a1b9488f4de5927ebecb9eb49e3}{class\+Name}} () const override
 \begin{DoxyCompactList}\small\item\em Get class identifier. \end{DoxyCompactList}\item 
 std\+::string \mbox{\hyperlink{classoriginal_1_1refCntPtr_a2b6187e87b8d807c0049a0c415e07adc}{to\+String}} (bool enter) const override
@@ -224,6 +230,56 @@ Reimplemented from \mbox{\hyperlink{classoriginal_1_1autoPtr_a92e53d3f6bbaedcac6
 
 Reimplemented in \mbox{\hyperlink{classoriginal_1_1strongPtr_a19276911dc3c7bd96d401126976b0f69}{original\+::strong\+Ptr$<$ TYPE, DELETER $>$}}, and \mbox{\hyperlink{classoriginal_1_1weakPtr_a699cf1fcf6f341d29480de899b002590}{original\+::weak\+Ptr$<$ TYPE, DELETER $>$}}.
 
+\Hypertarget{classoriginal_1_1refCntPtr_a614ce0dae97e2a365ba62f9681b8d28e}\index{original::refCntPtr$<$ TYPE, DERIVED, DELETER $>$@{original::refCntPtr$<$ TYPE, DERIVED, DELETER $>$}!operator"!=@{operator"!=}}
+\index{operator"!=@{operator"!=}!original::refCntPtr$<$ TYPE, DERIVED, DELETER $>$@{original::refCntPtr$<$ TYPE, DERIVED, DELETER $>$}}
+\doxysubsubsection{\texorpdfstring{operator"!=()}{operator!=()}}
+{\footnotesize\ttfamily \label{classoriginal_1_1refCntPtr_a614ce0dae97e2a365ba62f9681b8d28e} 
+template$<$typename TYPE, typename DERIVED, typename DELETER$>$ \\
+template$<$typename O\+\_\+\+DERIVED$>$ \\
+bool \mbox{\hyperlink{classoriginal_1_1refCntPtr}{original\+::ref\+Cnt\+Ptr}}$<$ TYPE, DERIVED, DELETER $>$\mbox{\hyperlink{namespaceoriginal_a1fb35d1af29a0c0be3a17081b9ca9dd0}{\+::operator!}}= (\begin{DoxyParamCaption}\item[{const \mbox{\hyperlink{classoriginal_1_1refCntPtr}{ref\+Cnt\+Ptr}}$<$ TYPE, O\+\_\+\+DERIVED, DELETER $>$ \&}]{other}{}\end{DoxyParamCaption}) const}
+
+
+
+Inequality comparison operator. 
+
+
+\begin{DoxyTemplParams}{Template Parameters}
+{\em O\+\_\+\+DERIVED} & Other derived class type (strong\+Ptr/weak\+Ptr) \\
+\hline
+\end{DoxyTemplParams}
+
+\begin{DoxyParams}{Parameters}
+{\em other} & Reference-\/counted pointer to compare with \\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+bool True if pointers use different reference counters 
+\end{DoxyReturn}
+\Hypertarget{classoriginal_1_1refCntPtr_a6a675f488777908381084b8821efaf04}\index{original::refCntPtr$<$ TYPE, DERIVED, DELETER $>$@{original::refCntPtr$<$ TYPE, DERIVED, DELETER $>$}!operator==@{operator==}}
+\index{operator==@{operator==}!original::refCntPtr$<$ TYPE, DERIVED, DELETER $>$@{original::refCntPtr$<$ TYPE, DERIVED, DELETER $>$}}
+\doxysubsubsection{\texorpdfstring{operator==()}{operator==()}}
+{\footnotesize\ttfamily \label{classoriginal_1_1refCntPtr_a6a675f488777908381084b8821efaf04} 
+template$<$typename TYPE, typename DERIVED, typename DELETER$>$ \\
+template$<$typename O\+\_\+\+DERIVED$>$ \\
+bool \mbox{\hyperlink{classoriginal_1_1refCntPtr}{original\+::ref\+Cnt\+Ptr}}$<$ TYPE, DERIVED, DELETER $>$\+::operator== (\begin{DoxyParamCaption}\item[{const \mbox{\hyperlink{classoriginal_1_1refCntPtr}{ref\+Cnt\+Ptr}}$<$ TYPE, O\+\_\+\+DERIVED, DELETER $>$ \&}]{other}{}\end{DoxyParamCaption}) const}
+
+
+
+Equality comparison operator. 
+
+
+\begin{DoxyTemplParams}{Template Parameters}
+{\em O\+\_\+\+DERIVED} & Other derived class type (strong\+Ptr/weak\+Ptr) \\
+\hline
+\end{DoxyTemplParams}
+
+\begin{DoxyParams}{Parameters}
+{\em other} & Reference-\/counted pointer to compare with \\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+bool True if both pointers share the same reference counter 
+\end{DoxyReturn}
 \Hypertarget{classoriginal_1_1refCntPtr_a2b6187e87b8d807c0049a0c415e07adc}\index{original::refCntPtr$<$ TYPE, DERIVED, DELETER $>$@{original::refCntPtr$<$ TYPE, DERIVED, DELETER $>$}!toString@{toString}}
 \index{toString@{toString}!original::refCntPtr$<$ TYPE, DERIVED, DELETER $>$@{original::refCntPtr$<$ TYPE, DERIVED, DELETER $>$}}
 \doxysubsubsection{\texorpdfstring{toString()}{toString()}}
