--- a/docs/latex/classoriginal_1_1strongPtr.tex
+++ b/docs/latex/classoriginal_1_1strongPtr.tex
@@ -11,7 +11,8 @@ Shared ownership smart pointer with strong references.
 
 
 
-Inheritance diagram for original\+::strong\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
+Inheritance diagram for original\+::strong\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -20,7 +21,8 @@ Inheritance diagram for original\+::strong\+Ptr\texorpdfstring{$<$}{<} TYPE, DEL
 \end{figure}
 
 
-Collaboration diagram for original\+::strong\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
+Collaboration diagram for original\+::strong\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -50,6 +52,10 @@ std\+::string \mbox{\hyperlink{classoriginal_1_1strongPtr_a19276911dc3c7bd96d401
 \doxysubsection*{Public Member Functions inherited from \mbox{\hyperlink{classoriginal_1_1refCntPtr}{original\+::ref\+Cnt\+Ptr$<$ TYPE, strong\+Ptr$<$ TYPE, DELETER $>$, DELETER $>$}}}
 \begin{DoxyCompactItemize}
 \item 
+bool \mbox{\hyperlink{classoriginal_1_1refCntPtr_a6a675f488777908381084b8821efaf04}{operator==}} (const \mbox{\hyperlink{classoriginal_1_1refCntPtr}{ref\+Cnt\+Ptr}}$<$ TYPE, O\+\_\+\+DERIVED, DELETER $>$ \&other) const
+\begin{DoxyCompactList}\small\item\em Equality comparison operator. \end{DoxyCompactList}\item 
+bool \mbox{\hyperlink{classoriginal_1_1refCntPtr_a614ce0dae97e2a365ba62f9681b8d28e}{operator!=}} (const \mbox{\hyperlink{classoriginal_1_1refCntPtr}{ref\+Cnt\+Ptr}}$<$ TYPE, O\+\_\+\+DERIVED, DELETER $>$ \&other) const
+\begin{DoxyCompactList}\small\item\em Inequality comparison operator. \end{DoxyCompactList}\item 
 std\+::string \mbox{\hyperlink{classoriginal_1_1refCntPtr_a2b6187e87b8d807c0049a0c415e07adc}{to\+String}} (bool enter) const override
 \begin{DoxyCompactList}\small\item\em Formatted string with reference info. \end{DoxyCompactList}\item 
 {\bfseries \texorpdfstring{$\sim$}{\string~}ref\+Cnt\+Ptr} () override=default
