--- a/docs/latex/classoriginal_1_1refCntPtr.tex
+++ b/docs/latex/classoriginal_1_1refCntPtr.tex
@@ -52,6 +52,8 @@ bool \mbox{\hyperlink{classoriginal_1_1autoPtr_abddf47f791e1a114a9139f373efa0e06
 \begin{DoxyCompactList}\small\item\em Check resource validity. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{classoriginal_1_1autoPtr_a1848178701127008797f8f1b32928317}{operator bool}} () const
 \begin{DoxyCompactList}\small\item\em Boolean conversion operator. \end{DoxyCompactList}\item 
+TYPE \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{classoriginal_1_1autoPtr_a4bf90c963949edebb3cfbbe739092c60}{get}} () const
+\begin{DoxyCompactList}\small\item\em Get managed pointer. \end{DoxyCompactList}\item 
 virtual const TYPE \& \mbox{\hyperlink{classoriginal_1_1autoPtr_ae06798fcf045511ae151f943251b22b0}{operator\texorpdfstring{$\ast$}{*}}} () const
 \begin{DoxyCompactList}\small\item\em Const dereference operator. \end{DoxyCompactList}\item 
 virtual const TYPE \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{classoriginal_1_1autoPtr_af1ff5222bff5917e8017ced782e479e4}{operator-\/$>$}} () const
@@ -114,8 +116,6 @@ virtual {\bfseries \texorpdfstring{$\sim$}{\string~}comparable} ()=default
 \item 
 \mbox{\hyperlink{classoriginal_1_1autoPtr_acb37ac59f5784a779b22dda3d44aaa4f}{auto\+Ptr}} (TYPE \texorpdfstring{$\ast$}{*}p)
 \begin{DoxyCompactList}\small\item\em Construct from raw pointer. \end{DoxyCompactList}\item 
-TYPE \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{classoriginal_1_1autoPtr_a5278ad116443c77923e32e8ca9d0c65c}{get\+Ptr}} () const
-\begin{DoxyCompactList}\small\item\em Get managed pointer. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classoriginal_1_1autoPtr_a736f8fd08d71e4493d21ed26f5a1a94f}{set\+Ptr}} (TYPE \texorpdfstring{$\ast$}{*}p)
 \begin{DoxyCompactList}\small\item\em Replace managed pointer. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{u\+\_\+integer}} \mbox{\hyperlink{classoriginal_1_1autoPtr_a308b395bd56c69c84cb6d2f5f661dbe1}{strong\+Refs}} () const
