--- a/docs/latex/ownerPtr_8h_source.tex
+++ b/docs/latex/ownerPtr_8h_source.tex
@@ -82,7 +82,7 @@
 \DoxyCodeLine{00146\ }
 \DoxyCodeLine{00147\ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ DELETER>}
 \DoxyCodeLine{00148\ \ \ \ \ TYPE*\ \mbox{\hyperlink{classoriginal_1_1ownerPtr_a9f8942a67bf3975838029f3c05269c9d}{ownerPtr<TYPE,\ DELETER>::unlock}}()\ \{}
-\DoxyCodeLine{00149\ \ \ \ \ \ \ \ \ TYPE*\ p\ =\ this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_a5278ad116443c77923e32e8ca9d0c65c}{getPtr}}();}
+\DoxyCodeLine{00149\ \ \ \ \ \ \ \ \ TYPE*\ p\ =\ this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_a4bf90c963949edebb3cfbbe739092c60}{get}}();}
 \DoxyCodeLine{00150\ \ \ \ \ \ \ \ \ this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_a736f8fd08d71e4493d21ed26f5a1a94f}{setPtr}}(\textcolor{keyword}{nullptr});}
 \DoxyCodeLine{00151\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ p;}
 \DoxyCodeLine{00152\ \ \ \ \ \}}
