--- a/docs/latex/refCntPtr_8h_source.tex
+++ b/docs/latex/refCntPtr_8h_source.tex
@@ -121,13 +121,13 @@
 \DoxyCodeLine{00333\ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ DERIVED,\ \textcolor{keyword}{typename}\ DELETER>}
 \DoxyCodeLine{00334\ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ O\_DERIVED>}
 \DoxyCodeLine{00335\ \ \ \ \ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{classoriginal_1_1refCntPtr_a6a675f488777908381084b8821efaf04}{refCntPtr<TYPE,\ DERIVED,\ DELETER>::operator==}}(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1refCntPtr_af6dcf44ea5829187f10bab1efb89f2c4}{refCntPtr<TYPE,\ O\_DERIVED,\ DELETER>}}\&\ other)\textcolor{keyword}{\ const\ }\{}
-\DoxyCodeLine{00336\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_ad4c1ff9af4fc5e3a120e01256ff5898b}{ref\_count}}\ ==\ other.\mbox{\hyperlink{classoriginal_1_1autoPtr_ad4c1ff9af4fc5e3a120e01256ff5898b}{ref\_count}};}
+\DoxyCodeLine{00336\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_a4bf90c963949edebb3cfbbe739092c60}{get}}()\ ==\ other.\mbox{\hyperlink{classoriginal_1_1autoPtr_a4bf90c963949edebb3cfbbe739092c60}{get}}();}
 \DoxyCodeLine{00337\ \ \ \ \ \}}
 \DoxyCodeLine{00338\ }
 \DoxyCodeLine{00339\ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ DERIVED,\ \textcolor{keyword}{typename}\ DELETER>}
 \DoxyCodeLine{00340\ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ O\_DERIVED>}
 \DoxyCodeLine{00341\ \ \ \ \ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{classoriginal_1_1refCntPtr_a614ce0dae97e2a365ba62f9681b8d28e}{refCntPtr<TYPE,\ DERIVED,\ DELETER>::operator!=}}(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1refCntPtr_af6dcf44ea5829187f10bab1efb89f2c4}{refCntPtr<TYPE,\ O\_DERIVED,\ DELETER>}}\&\ other)\textcolor{keyword}{\ const\ }\{}
-\DoxyCodeLine{00342\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_ad4c1ff9af4fc5e3a120e01256ff5898b}{ref\_count}}\ !=\ other.\mbox{\hyperlink{classoriginal_1_1autoPtr_ad4c1ff9af4fc5e3a120e01256ff5898b}{ref\_count}};}
+\DoxyCodeLine{00342\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_a4bf90c963949edebb3cfbbe739092c60}{get}}()\ !=\ other.\mbox{\hyperlink{classoriginal_1_1autoPtr_a4bf90c963949edebb3cfbbe739092c60}{get}}();}
 \DoxyCodeLine{00343\ \ \ \ \ \}}
 \DoxyCodeLine{00344\ }
 \DoxyCodeLine{00345\ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ DERIVED,\ \textcolor{keyword}{typename}\ DELETER>}
@@ -139,7 +139,7 @@
 \DoxyCodeLine{00351\ \ \ \ \ std::string\ \mbox{\hyperlink{classoriginal_1_1refCntPtr_a2b6187e87b8d807c0049a0c415e07adc}{refCntPtr<TYPE,\ DERIVED,\ DELETER>::toString}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{bool}\ enter)\textcolor{keyword}{\ const\ }\{}
 \DoxyCodeLine{00352\ \ \ \ \ \ \ \ \ std::stringstream\ ss;}
 \DoxyCodeLine{00353\ \ \ \ \ \ \ \ \ ss\ <<\ this-\/>\mbox{\hyperlink{classoriginal_1_1refCntPtr_a062a5a1b9488f4de5927ebecb9eb49e3}{className}}()\ <<\ \textcolor{stringliteral}{"{}("{}};}
-\DoxyCodeLine{00354\ \ \ \ \ \ \ \ \ ss\ <<\ \mbox{\hyperlink{classoriginal_1_1printable_af9c95c33d1f0abc8188d2c594e879fb6}{printable::formatString}}(this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_a5278ad116443c77923e32e8ca9d0c65c}{getPtr}}())\ <<\ \textcolor{stringliteral}{"{},\ "{}};}
+\DoxyCodeLine{00354\ \ \ \ \ \ \ \ \ ss\ <<\ \mbox{\hyperlink{classoriginal_1_1printable_af9c95c33d1f0abc8188d2c594e879fb6}{printable::formatString}}(this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_a4bf90c963949edebb3cfbbe739092c60}{get}}())\ <<\ \textcolor{stringliteral}{"{},\ "{}};}
 \DoxyCodeLine{00355\ \ \ \ \ \ \ \ \ ss\ <<\ \textcolor{stringliteral}{"{}strong\ ref:\ "{}}\ <<\ this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_a308b395bd56c69c84cb6d2f5f661dbe1}{strongRefs}}()\ <<\ \textcolor{stringliteral}{"{},\ "{}}\ <<\ \textcolor{stringliteral}{"{}weak\ ref:\ "{}}\ <<\ this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_ac49b1da32d59049a6e64493746f512d6}{weakRefs}}();}
 \DoxyCodeLine{00356\ \ \ \ \ \ \ \ \ ss\ <<\ \textcolor{stringliteral}{"{})"{}};}
 \DoxyCodeLine{00357\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{if}\ (enter)}
