--- a/docs/latex/classoriginal_1_1refCntPtr.tex
+++ b/docs/latex/classoriginal_1_1refCntPtr.tex
@@ -11,8 +11,7 @@ Base class for reference-\/counted pointers.
 
 
 
-Inheritance diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Inheritance diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, D
 \end{figure}
 
 
-Collaboration diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
