--- a/docs/latex/classoriginal_1_1strongPtr.tex
+++ b/docs/latex/classoriginal_1_1strongPtr.tex
@@ -11,8 +11,7 @@ Shared ownership smart pointer with strong references.
 
 
 
-Inheritance diagram for original\+::strong\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Inheritance diagram for original\+::strong\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for original\+::strong\+Ptr\texorpdfstring{$<$}{<} TYPE, DEL
 \end{figure}
 
 
-Collaboration diagram for original\+::strong\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::strong\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
