--- a/docs/latex/classoriginal_1_1deleter.tex
+++ b/docs/latex/classoriginal_1_1deleter.tex
@@ -21,7 +21,7 @@ Collaboration diagram for original\+::deleter\texorpdfstring{$<$}{<} TYPE \texor
 \doxysubsubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-void \mbox{\hyperlink{classoriginal_1_1deleter_a7351b34defe3fc712303708efaeca979}{operator()}} (const TYPE \texorpdfstring{$\ast$}{*}ptr) const noexcept
+virtual void \mbox{\hyperlink{classoriginal_1_1deleter_a7351b34defe3fc712303708efaeca979}{operator()}} (const TYPE \texorpdfstring{$\ast$}{*}ptr) const noexcept
 \begin{DoxyCompactList}\small\item\em Deletes a single object. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
@@ -52,7 +52,7 @@ Invokes array delete\mbox{[}\mbox{]} operator for proper array cleanup. Must be 
 \doxysubsubsection{\texorpdfstring{operator()()}{operator()()}}
 {\footnotesize\ttfamily \label{classoriginal_1_1deleter_a7351b34defe3fc712303708efaeca979} 
 template$<$typename TYPE$>$ \\
-void \mbox{\hyperlink{classoriginal_1_1deleter}{original\+::deleter}}$<$ TYPE $>$\+::operator() (\begin{DoxyParamCaption}\item[{const TYPE \texorpdfstring{$\ast$}{*}}]{ptr}{}\end{DoxyParamCaption}) const\hspace{0.3cm}{\ttfamily [noexcept]}}
+void \mbox{\hyperlink{classoriginal_1_1deleter}{original\+::deleter}}$<$ TYPE $>$\+::operator() (\begin{DoxyParamCaption}\item[{const TYPE \texorpdfstring{$\ast$}{*}}]{ptr}{}\end{DoxyParamCaption}) const\hspace{0.3cm}{\ttfamily [virtual]}, {\ttfamily [noexcept]}}
 
 
 
