--- a/docs/latex/classoriginal_1_1deleter_3_01TYPE_0f_0e_4.tex
+++ b/docs/latex/classoriginal_1_1deleter_3_01TYPE_0f_0e_4.tex
@@ -12,9 +12,9 @@ Collaboration diagram for original\+::deleter\texorpdfstring{$<$}{<} TYPE\mbox{[
 \doxysubsubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-void \mbox{\hyperlink{classoriginal_1_1deleter_3_01TYPE_0f_0e_4_a5637a61bf6c1c2cc4bfbde4b02749e3c}{operator()}} (const TYPE \texorpdfstring{$\ast$}{*}ptr) const noexcept
+virtual void \mbox{\hyperlink{classoriginal_1_1deleter_3_01TYPE_0f_0e_4_a5637a61bf6c1c2cc4bfbde4b02749e3c}{operator()}} (const TYPE \texorpdfstring{$\ast$}{*}ptr) const noexcept
 \begin{DoxyCompactList}\small\item\em Deletes an array. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{classoriginal_1_1deleter_a7351b34defe3fc712303708efaeca979}{operator()}} (const TYPE \texorpdfstring{$\ast$}{*}ptr) const noexcept
+virtual void \mbox{\hyperlink{classoriginal_1_1deleter_a7351b34defe3fc712303708efaeca979}{operator()}} (const TYPE \texorpdfstring{$\ast$}{*}ptr) const noexcept
 \begin{DoxyCompactList}\small\item\em Deletes a single object. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
@@ -23,7 +23,7 @@ void \mbox{\hyperlink{classoriginal_1_1deleter_a7351b34defe3fc712303708efaeca979
 \index{operator()@{operator()}!original::deleter$<$ TYPE\mbox{[}\mbox{]}$>$@{original::deleter$<$ TYPE[]$>$}}
 \doxysubsubsection{\texorpdfstring{operator()()}{operator()()}\hspace{0.1cm}{\footnotesize\ttfamily [1/2]}}
 {\footnotesize\ttfamily \label{classoriginal_1_1deleter_a7351b34defe3fc712303708efaeca979} 
-void \mbox{\hyperlink{classoriginal_1_1deleter}{original\+::deleter}}$<$ TYPE $>$\+::operator() (\begin{DoxyParamCaption}\item[{const TYPE \texorpdfstring{$\ast$}{*}}]{ptr}{}\end{DoxyParamCaption}) const\hspace{0.3cm}{\ttfamily [noexcept]}}
+void \mbox{\hyperlink{classoriginal_1_1deleter}{original\+::deleter}}$<$ TYPE $>$\+::operator() (\begin{DoxyParamCaption}\item[{const TYPE \texorpdfstring{$\ast$}{*}}]{ptr}{}\end{DoxyParamCaption}) const\hspace{0.3cm}{\ttfamily [virtual]}, {\ttfamily [noexcept]}}
 
 
 
@@ -42,7 +42,7 @@ Uses standard delete operator. Do not use with array types.
 \doxysubsubsection{\texorpdfstring{operator()()}{operator()()}\hspace{0.1cm}{\footnotesize\ttfamily [2/2]}}
 {\footnotesize\ttfamily \label{classoriginal_1_1deleter_3_01TYPE_0f_0e_4_a5637a61bf6c1c2cc4bfbde4b02749e3c} 
 template$<$typename TYPE$>$ \\
-void \mbox{\hyperlink{classoriginal_1_1deleter}{original\+::deleter}}$<$ TYPE\mbox{[}$\,$\mbox{]}$>$\+::operator() (\begin{DoxyParamCaption}\item[{const TYPE \texorpdfstring{$\ast$}{*}}]{ptr}{}\end{DoxyParamCaption}) const\hspace{0.3cm}{\ttfamily [noexcept]}}
+void \mbox{\hyperlink{classoriginal_1_1deleter}{original\+::deleter}}$<$ TYPE\mbox{[}$\,$\mbox{]}$>$\+::operator() (\begin{DoxyParamCaption}\item[{const TYPE \texorpdfstring{$\ast$}{*}}]{ptr}{}\end{DoxyParamCaption}) const\hspace{0.3cm}{\ttfamily [virtual]}, {\ttfamily [noexcept]}}
 
 
 
