--- a/docs/latex/deleter_8h_source.tex
+++ b/docs/latex/deleter_8h_source.tex
@@ -13,7 +13,7 @@
 \DoxyCodeLine{00022\ \ \ \ \ \ \ \ \ \textcolor{keyword}{constexpr}\ deleter()\ \textcolor{keyword}{noexcept}\ =\ \textcolor{keywordflow}{default};}
 \DoxyCodeLine{00023\ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \string~deleter()\ =\ \textcolor{keywordflow}{default};}
 \DoxyCodeLine{00024\ }
-\DoxyCodeLine{00030\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classoriginal_1_1deleter_a7351b34defe3fc712303708efaeca979}{operator()}}(\textcolor{keyword}{const}\ TYPE*\ ptr)\ \textcolor{keyword}{const}\ \textcolor{keyword}{noexcept};}
+\DoxyCodeLine{00030\ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classoriginal_1_1deleter_a7351b34defe3fc712303708efaeca979}{operator()}}(\textcolor{keyword}{const}\ TYPE*\ ptr)\ \textcolor{keyword}{const}\ \textcolor{keyword}{noexcept};}
 \DoxyCodeLine{00031\ \ \ \ \ \};}
 \DoxyCodeLine{00032\ }
 \DoxyCodeLine{00040\ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE>}
@@ -22,7 +22,7 @@
 \DoxyCodeLine{00043\ \ \ \ \ \ \ \ \ \textcolor{keyword}{constexpr}\ deleter()\ \textcolor{keyword}{noexcept}\ =\ \textcolor{keywordflow}{default};}
 \DoxyCodeLine{00044\ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \string~deleter()\ =\ \textcolor{keywordflow}{default};}
 \DoxyCodeLine{00045\ }
-\DoxyCodeLine{00051\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classoriginal_1_1deleter_a7351b34defe3fc712303708efaeca979}{operator()}}(\textcolor{keyword}{const}\ TYPE*\ ptr)\ \textcolor{keyword}{const}\ \textcolor{keyword}{noexcept};}
+\DoxyCodeLine{00051\ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classoriginal_1_1deleter_a7351b34defe3fc712303708efaeca979}{operator()}}(\textcolor{keyword}{const}\ TYPE*\ ptr)\ \textcolor{keyword}{const}\ \textcolor{keyword}{noexcept};}
 \DoxyCodeLine{00052\ \ \ \ \ \};}
 \DoxyCodeLine{00053\ \}}
 \DoxyCodeLine{00054\ }
