--- a/docs/latex/classoriginal_1_1weakPtr.tex
+++ b/docs/latex/classoriginal_1_1weakPtr.tex
@@ -11,7 +11,8 @@ Non-\/owning reference to shared resource.
 
 
 
-Inheritance diagram for original\+::weak\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
+Inheritance diagram for original\+::weak\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -20,7 +21,8 @@ Inheritance diagram for original\+::weak\+Ptr\texorpdfstring{$<$}{<} TYPE, DELET
 \end{figure}
 
 
-Collaboration diagram for original\+::weak\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
+Collaboration diagram for original\+::weak\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -30,6 +32,9 @@ Collaboration diagram for original\+::weak\+Ptr\texorpdfstring{$<$}{<} TYPE, DEL
 \doxysubsubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
+\Hypertarget{classoriginal_1_1weakPtr_afc50298f9a468f4f2bba55c0fda28826}\label{classoriginal_1_1weakPtr_afc50298f9a468f4f2bba55c0fda28826} 
+{\bfseries weak\+Ptr} ()
+\begin{DoxyCompactList}\small\item\em Initialize empty weak reference. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{classoriginal_1_1weakPtr_ad9c4964bf699cea9438287187e2d87d8}{weak\+Ptr}} (const \mbox{\hyperlink{classoriginal_1_1strongPtr}{strong\+Ptr}}$<$ TYPE, DELETER $>$ \&other)
 \begin{DoxyCompactList}\small\item\em Construct from \doxylink{classoriginal_1_1strongPtr}{strong\+Ptr} observer. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{classoriginal_1_1weakPtr}{weak\+Ptr}} \& \mbox{\hyperlink{classoriginal_1_1weakPtr_aa8daa0b7e238f1f502923fc938403aa7}{operator=}} (const \mbox{\hyperlink{classoriginal_1_1strongPtr}{strong\+Ptr}}$<$ TYPE, DELETER $>$ \&other)
@@ -74,6 +79,10 @@ std\+::string \mbox{\hyperlink{classoriginal_1_1refCntPtr_a2b6187e87b8d807c0049a
 \doxysubsection*{Public Member Functions inherited from \mbox{\hyperlink{classoriginal_1_1autoPtr}{original\+::auto\+Ptr$<$ TYPE, weak\+Ptr$<$ TYPE, DELETER $>$, DELETER $>$}}}
 \begin{DoxyCompactItemize}
 \item 
+\mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{u\+\_\+integer}} \mbox{\hyperlink{classoriginal_1_1autoPtr_a308b395bd56c69c84cb6d2f5f661dbe1}{strong\+Refs}} () const
+\begin{DoxyCompactList}\small\item\em Get strong reference count. \end{DoxyCompactList}\item 
+\mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{u\+\_\+integer}} \mbox{\hyperlink{classoriginal_1_1autoPtr_ac49b1da32d59049a6e64493746f512d6}{weak\+Refs}} () const
+\begin{DoxyCompactList}\small\item\em Get weak reference count. \end{DoxyCompactList}\item 
 bool \mbox{\hyperlink{classoriginal_1_1autoPtr_a5022614b81f2a10940b63ba73937b462}{exist}} () const
 \begin{DoxyCompactList}\small\item\em Check active ownership. \end{DoxyCompactList}\item 
 bool \mbox{\hyperlink{classoriginal_1_1autoPtr_abddf47f791e1a114a9139f373efa0e06}{expired}} () const
@@ -158,10 +167,6 @@ template$<$$>$ auto {\bfseries format\+String} (const char \texorpdfstring{$\ast
 \begin{DoxyCompactList}\small\item\em Construct from raw pointer. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classoriginal_1_1autoPtr_a736f8fd08d71e4493d21ed26f5a1a94f}{set\+Ptr}} (TYPE \texorpdfstring{$\ast$}{*}p)
 \begin{DoxyCompactList}\small\item\em Replace managed pointer. \end{DoxyCompactList}\item 
-\mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{u\+\_\+integer}} \mbox{\hyperlink{classoriginal_1_1autoPtr_a308b395bd56c69c84cb6d2f5f661dbe1}{strong\+Refs}} () const
-\begin{DoxyCompactList}\small\item\em Get strong reference count. \end{DoxyCompactList}\item 
-\mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{u\+\_\+integer}} \mbox{\hyperlink{classoriginal_1_1autoPtr_ac49b1da32d59049a6e64493746f512d6}{weak\+Refs}} () const
-\begin{DoxyCompactList}\small\item\em Get weak reference count. \end{DoxyCompactList}\item 
 void {\bfseries add\+Strong\+Ref} ()
 \begin{DoxyCompactList}\small\item\em Increment strong reference count. \end{DoxyCompactList}\item 
 void {\bfseries add\+Weak\+Ref} ()
