--- a/docs/latex/classoriginal_1_1refCntPtr.tex
+++ b/docs/latex/classoriginal_1_1refCntPtr.tex
@@ -11,7 +11,8 @@ Base class for reference-\/counted pointers.
 
 
 
-Inheritance diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
+Inheritance diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -20,7 +21,8 @@ Inheritance diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, D
 \end{figure}
 
 
-Collaboration diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
+Collaboration diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -44,6 +46,10 @@ std\+::string \mbox{\hyperlink{classoriginal_1_1refCntPtr_a2b6187e87b8d807c0049a
 \doxysubsection*{Public Member Functions inherited from \mbox{\hyperlink{classoriginal_1_1autoPtr}{original\+::auto\+Ptr$<$ TYPE, DERIVED, DELETER $>$}}}
 \begin{DoxyCompactItemize}
 \item 
+\mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{u\+\_\+integer}} \mbox{\hyperlink{classoriginal_1_1autoPtr_a308b395bd56c69c84cb6d2f5f661dbe1}{strong\+Refs}} () const
+\begin{DoxyCompactList}\small\item\em Get strong reference count. \end{DoxyCompactList}\item 
+\mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{u\+\_\+integer}} \mbox{\hyperlink{classoriginal_1_1autoPtr_ac49b1da32d59049a6e64493746f512d6}{weak\+Refs}} () const
+\begin{DoxyCompactList}\small\item\em Get weak reference count. \end{DoxyCompactList}\item 
 bool \mbox{\hyperlink{classoriginal_1_1autoPtr_a5022614b81f2a10940b63ba73937b462}{exist}} () const
 \begin{DoxyCompactList}\small\item\em Check active ownership. \end{DoxyCompactList}\item 
 bool \mbox{\hyperlink{classoriginal_1_1autoPtr_abddf47f791e1a114a9139f373efa0e06}{expired}} () const
@@ -116,10 +122,6 @@ virtual {\bfseries \texorpdfstring{$\sim$}{\string~}comparable} ()=default
 \begin{DoxyCompactList}\small\item\em Construct from raw pointer. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classoriginal_1_1autoPtr_a736f8fd08d71e4493d21ed26f5a1a94f}{set\+Ptr}} (TYPE \texorpdfstring{$\ast$}{*}p)
 \begin{DoxyCompactList}\small\item\em Replace managed pointer. \end{DoxyCompactList}\item 
-\mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{u\+\_\+integer}} \mbox{\hyperlink{classoriginal_1_1autoPtr_a308b395bd56c69c84cb6d2f5f661dbe1}{strong\+Refs}} () const
-\begin{DoxyCompactList}\small\item\em Get strong reference count. \end{DoxyCompactList}\item 
-\mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{u\+\_\+integer}} \mbox{\hyperlink{classoriginal_1_1autoPtr_ac49b1da32d59049a6e64493746f512d6}{weak\+Refs}} () const
-\begin{DoxyCompactList}\small\item\em Get weak reference count. \end{DoxyCompactList}\item 
 void {\bfseries add\+Strong\+Ref} ()
 \begin{DoxyCompactList}\small\item\em Increment strong reference count. \end{DoxyCompactList}\item 
 void {\bfseries add\+Weak\+Ref} ()
